Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -58,198 +58,219 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td>612</td>\n",
+       "      <td>0</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>Delaware</td>\n",
-       "      <td>10</td>\n",
-       "      <td>5-14 years</td>\n",
-       "      <td>5-14</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>M</td>\n",
-       "      <td>White</td>\n",
-       "      <td>2106-3</td>\n",
-       "      <td>108</td>\n",
-       "      <td>696840</td>\n",
-       "      <td>15.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>4029</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Wisconsin</td>\n",
-       "      <td>55</td>\n",
-       "      <td>65-74 years</td>\n",
-       "      <td>65-74</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>M</td>\n",
-       "      <td>Asian or Pacific Islander</td>\n",
-       "      <td>A-PI</td>\n",
-       "      <td>400</td>\n",
-       "      <td>28569</td>\n",
-       "      <td>1400.1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>2554</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>New Mexico</td>\n",
-       "      <td>35</td>\n",
-       "      <td>35-44 years</td>\n",
-       "      <td>35-44</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>1</td>\n",
+       "      <td>&lt; 1 year</td>\n",
+       "      <td>1</td>\n",
        "      <td>Female</td>\n",
        "      <td>F</td>\n",
        "      <td>American Indian or Alaska Native</td>\n",
        "      <td>1002-5</td>\n",
-       "      <td>739</td>\n",
-       "      <td>255843</td>\n",
-       "      <td>288.8</td>\n",
+       "      <td>14</td>\n",
+       "      <td>3579</td>\n",
+       "      <td>Unreliable</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>1077</td>\n",
+       "      <td>1</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>Illinois</td>\n",
-       "      <td>17</td>\n",
-       "      <td>15-24 years</td>\n",
-       "      <td>15-24</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>1</td>\n",
+       "      <td>&lt; 1 year</td>\n",
+       "      <td>1</td>\n",
        "      <td>Female</td>\n",
        "      <td>F</td>\n",
        "      <td>Asian or Pacific Islander</td>\n",
        "      <td>A-PI</td>\n",
-       "      <td>123</td>\n",
-       "      <td>751437</td>\n",
-       "      <td>16.4</td>\n",
+       "      <td>24</td>\n",
+       "      <td>7443</td>\n",
+       "      <td>322.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>707</td>\n",
+       "      <td>2</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>District of Columbia</td>\n",
-       "      <td>11</td>\n",
-       "      <td>55-64 years</td>\n",
-       "      <td>55-64</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>M</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>1</td>\n",
+       "      <td>&lt; 1 year</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>F</td>\n",
        "      <td>Black or African American</td>\n",
        "      <td>2054-5</td>\n",
-       "      <td>7039</td>\n",
-       "      <td>294629</td>\n",
-       "      <td>2389.1</td>\n",
+       "      <td>2093</td>\n",
+       "      <td>169339</td>\n",
+       "      <td>1236.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>1278</td>\n",
+       "      <td>3</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>Iowa</td>\n",
-       "      <td>19</td>\n",
-       "      <td>55-64 years</td>\n",
-       "      <td>55-64</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>M</td>\n",
-       "      <td>American Indian or Alaska Native</td>\n",
-       "      <td>1002-5</td>\n",
-       "      <td>84</td>\n",
-       "      <td>7814</td>\n",
-       "      <td>1075.0</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>1</td>\n",
+       "      <td>&lt; 1 year</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>F</td>\n",
+       "      <td>White</td>\n",
+       "      <td>2106-3</td>\n",
+       "      <td>2144</td>\n",
+       "      <td>347921</td>\n",
+       "      <td>616.2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>343</td>\n",
+       "      <td>4</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>California</td>\n",
-       "      <td>6</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>1</td>\n",
        "      <td>&lt; 1 year</td>\n",
        "      <td>1</td>\n",
        "      <td>Male</td>\n",
        "      <td>M</td>\n",
-       "      <td>White</td>\n",
-       "      <td>2106-3</td>\n",
-       "      <td>19597</td>\n",
-       "      <td>3641682</td>\n",
-       "      <td>538.1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>2006</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Mississippi</td>\n",
-       "      <td>28</td>\n",
-       "      <td>45-54 years</td>\n",
-       "      <td>45-54</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>F</td>\n",
        "      <td>Asian or Pacific Islander</td>\n",
        "      <td>A-PI</td>\n",
-       "      <td>70</td>\n",
-       "      <td>35683</td>\n",
-       "      <td>196.2</td>\n",
+       "      <td>33</td>\n",
+       "      <td>7366</td>\n",
+       "      <td>448.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>2956</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>75</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>Oklahoma</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>1</td>\n",
+       "      <td>85+ years</td>\n",
+       "      <td>85+</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>F</td>\n",
+       "      <td>White</td>\n",
+       "      <td>2106-3</td>\n",
+       "      <td>116297</td>\n",
+       "      <td>740184</td>\n",
+       "      <td>15711.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>76</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>1</td>\n",
+       "      <td>85+ years</td>\n",
+       "      <td>85+</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>M</td>\n",
+       "      <td>American Indian or Alaska Native</td>\n",
+       "      <td>1002-5</td>\n",
        "      <td>40</td>\n",
-       "      <td>5-14 years</td>\n",
-       "      <td>5-14</td>\n",
+       "      <td>1129</td>\n",
+       "      <td>3543.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>77</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>1</td>\n",
+       "      <td>85+ years</td>\n",
+       "      <td>85+</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>M</td>\n",
+       "      <td>Asian or Pacific Islander</td>\n",
+       "      <td>A-PI</td>\n",
+       "      <td>92</td>\n",
+       "      <td>1269</td>\n",
+       "      <td>7249.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>78</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>1</td>\n",
+       "      <td>85+ years</td>\n",
+       "      <td>85+</td>\n",
        "      <td>Male</td>\n",
        "      <td>M</td>\n",
        "      <td>Black or African American</td>\n",
        "      <td>2054-5</td>\n",
-       "      <td>154</td>\n",
-       "      <td>514938</td>\n",
-       "      <td>29.9</td>\n",
+       "      <td>12016</td>\n",
+       "      <td>68421</td>\n",
+       "      <td>17561.9</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>1108</td>\n",
+       "      <td>79</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>Illinois</td>\n",
-       "      <td>17</td>\n",
-       "      <td>55-64 years</td>\n",
-       "      <td>55-64</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>F</td>\n",
-       "      <td>American Indian or Alaska Native</td>\n",
-       "      <td>1002-5</td>\n",
-       "      <td>111</td>\n",
-       "      <td>45363</td>\n",
-       "      <td>244.7</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>1</td>\n",
+       "      <td>85+ years</td>\n",
+       "      <td>85+</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>M</td>\n",
+       "      <td>White</td>\n",
+       "      <td>2106-3</td>\n",
+       "      <td>57514</td>\n",
+       "      <td>320674</td>\n",
+       "      <td>17935.3</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>80 rows × 12 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "      Notes                 State  State Code Ten-Year Age Groups  \\\n",
-       "612     NaN              Delaware          10          5-14 years   \n",
-       "4029    NaN             Wisconsin          55         65-74 years   \n",
-       "2554    NaN            New Mexico          35         35-44 years   \n",
-       "1077    NaN              Illinois          17         15-24 years   \n",
-       "707     NaN  District of Columbia          11         55-64 years   \n",
-       "1278    NaN                  Iowa          19         55-64 years   \n",
-       "343     NaN            California           6            < 1 year   \n",
-       "2006    NaN           Mississippi          28         45-54 years   \n",
-       "2956    NaN              Oklahoma          40          5-14 years   \n",
-       "1108    NaN              Illinois          17         55-64 years   \n",
+       "    Notes    State  State Code Ten-Year Age Groups Ten-Year Age Groups Code  \\\n",
+       "0     NaN  Alabama           1            < 1 year                        1   \n",
+       "1     NaN  Alabama           1            < 1 year                        1   \n",
+       "2     NaN  Alabama           1            < 1 year                        1   \n",
+       "3     NaN  Alabama           1            < 1 year                        1   \n",
+       "4     NaN  Alabama           1            < 1 year                        1   \n",
+       "..    ...      ...         ...                 ...                      ...   \n",
+       "75    NaN  Alabama           1           85+ years                      85+   \n",
+       "76    NaN  Alabama           1           85+ years                      85+   \n",
+       "77    NaN  Alabama           1           85+ years                      85+   \n",
+       "78    NaN  Alabama           1           85+ years                      85+   \n",
+       "79    NaN  Alabama           1           85+ years                      85+   \n",
        "\n",
-       "     Ten-Year Age Groups Code  Gender Gender Code  \\\n",
-       "612                      5-14    Male           M   \n",
-       "4029                    65-74    Male           M   \n",
-       "2554                    35-44  Female           F   \n",
-       "1077                    15-24  Female           F   \n",
-       "707                     55-64    Male           M   \n",
-       "1278                    55-64    Male           M   \n",
-       "343                         1    Male           M   \n",
-       "2006                    45-54  Female           F   \n",
-       "2956                     5-14    Male           M   \n",
-       "1108                    55-64  Female           F   \n",
+       "    Gender Gender Code                              Race Race Code  Deaths  \\\n",
+       "0   Female           F  American Indian or Alaska Native    1002-5      14   \n",
+       "1   Female           F         Asian or Pacific Islander      A-PI      24   \n",
+       "2   Female           F         Black or African American    2054-5    2093   \n",
+       "3   Female           F                             White    2106-3    2144   \n",
+       "4     Male           M         Asian or Pacific Islander      A-PI      33   \n",
+       "..     ...         ...                               ...       ...     ...   \n",
+       "75  Female           F                             White    2106-3  116297   \n",
+       "76    Male           M  American Indian or Alaska Native    1002-5      40   \n",
+       "77    Male           M         Asian or Pacific Islander      A-PI      92   \n",
+       "78    Male           M         Black or African American    2054-5   12016   \n",
+       "79    Male           M                             White    2106-3   57514   \n",
        "\n",
-       "                                  Race Race Code  Deaths Population Crude Rate  \n",
-       "612                              White    2106-3     108     696840       15.5  \n",
-       "4029         Asian or Pacific Islander      A-PI     400      28569     1400.1  \n",
-       "2554  American Indian or Alaska Native    1002-5     739     255843      288.8  \n",
-       "1077         Asian or Pacific Islander      A-PI     123     751437       16.4  \n",
-       "707          Black or African American    2054-5    7039     294629     2389.1  \n",
-       "1278  American Indian or Alaska Native    1002-5      84       7814     1075.0  \n",
-       "343                              White    2106-3   19597    3641682      538.1  \n",
-       "2006         Asian or Pacific Islander      A-PI      70      35683      196.2  \n",
-       "2956         Black or African American    2054-5     154     514938       29.9  \n",
-       "1108  American Indian or Alaska Native    1002-5     111      45363      244.7  "
+       "   Population  Crude Rate  \n",
+       "0        3579  Unreliable  \n",
+       "1        7443       322.5  \n",
+       "2      169339      1236.0  \n",
+       "3      347921       616.2  \n",
+       "4        7366       448.0  \n",
+       "..        ...         ...  \n",
+       "75     740184     15711.9  \n",
+       "76       1129      3543.0  \n",
+       "77       1269      7249.8  \n",
+       "78      68421     17561.9  \n",
+       "79     320674     17935.3  \n",
+       "\n",
+       "[80 rows x 12 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -257,7 +278,7 @@
    "source": [
     "df = pd.read_csv('causes_of_death.tsv', delimiter='\\t')\n",
     "print(len(df))\n",
-    "df.sample(10)"
+    "df.head(80)"
    ]
   },
   {
