Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -148,21 +148,6 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>75</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Alabama</td>\n",
-       "      <td>1</td>\n",
-       "      <td>85+ years</td>\n",
-       "      <td>85+</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>F</td>\n",
-       "      <td>White</td>\n",
-       "      <td>2106-3</td>\n",
-       "      <td>116297</td>\n",
-       "      <td>740184</td>\n",
-       "      <td>15711.9</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <td>76</td>\n",
        "      <td>NaN</td>\n",
        "      <td>Alabama</td>\n",
@@ -222,9 +207,24 @@
        "      <td>320674</td>\n",
        "      <td>17935.3</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <td>80</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Not Stated</td>\n",
+       "      <td>NS</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>M</td>\n",
+       "      <td>White</td>\n",
+       "      <td>2106-3</td>\n",
+       "      <td>13</td>\n",
+       "      <td>Not Applicable</td>\n",
+       "      <td>Not Applicable</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>80 rows × 12 columns</p>\n",
+       "<p>81 rows × 12 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -235,11 +235,11 @@
        "3     NaN  Alabama           1            < 1 year                        1   \n",
        "4     NaN  Alabama           1            < 1 year                        1   \n",
        "..    ...      ...         ...                 ...                      ...   \n",
-       "75    NaN  Alabama           1           85+ years                      85+   \n",
        "76    NaN  Alabama           1           85+ years                      85+   \n",
        "77    NaN  Alabama           1           85+ years                      85+   \n",
        "78    NaN  Alabama           1           85+ years                      85+   \n",
        "79    NaN  Alabama           1           85+ years                      85+   \n",
+       "80    NaN  Alabama           1          Not Stated                       NS   \n",
        "\n",
        "    Gender Gender Code                              Race Race Code  Deaths  \\\n",
        "0   Female           F  American Indian or Alaska Native    1002-5      14   \n",
@@ -248,29 +248,29 @@
        "3   Female           F                             White    2106-3    2144   \n",
        "4     Male           M         Asian or Pacific Islander      A-PI      33   \n",
        "..     ...         ...                               ...       ...     ...   \n",
-       "75  Female           F                             White    2106-3  116297   \n",
        "76    Male           M  American Indian or Alaska Native    1002-5      40   \n",
        "77    Male           M         Asian or Pacific Islander      A-PI      92   \n",
        "78    Male           M         Black or African American    2054-5   12016   \n",
        "79    Male           M                             White    2106-3   57514   \n",
+       "80    Male           M                             White    2106-3      13   \n",
        "\n",
-       "   Population  Crude Rate  \n",
-       "0        3579  Unreliable  \n",
-       "1        7443       322.5  \n",
-       "2      169339      1236.0  \n",
-       "3      347921       616.2  \n",
-       "4        7366       448.0  \n",
-       "..        ...         ...  \n",
-       "75     740184     15711.9  \n",
-       "76       1129      3543.0  \n",
-       "77       1269      7249.8  \n",
-       "78      68421     17561.9  \n",
-       "79     320674     17935.3  \n",
+       "        Population      Crude Rate  \n",
+       "0             3579      Unreliable  \n",
+       "1             7443           322.5  \n",
+       "2           169339          1236.0  \n",
+       "3           347921           616.2  \n",
+       "4             7366           448.0  \n",
+       "..             ...             ...  \n",
+       "76            1129          3543.0  \n",
+       "77            1269          7249.8  \n",
+       "78           68421         17561.9  \n",
+       "79          320674         17935.3  \n",
+       "80  Not Applicable  Not Applicable  \n",
        "\n",
-       "[80 rows x 12 columns]"
+       "[81 rows x 12 columns]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -278,7 +278,7 @@
    "source": [
     "df = pd.read_csv('causes_of_death.tsv', delimiter='\\t')\n",
     "print(len(df))\n",
-    "df.head(80)"
+    "df.head(81)"
    ]
   },
   {
