Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -317,9 +317,9 @@
       "Race                        4115 non-null object\n",
       "Race Code                   4115 non-null object\n",
       "Deaths                      4115 non-null int64\n",
-      "Population                  4115 non-null object\n",
+      "Population                  4040 non-null float64\n",
       "Crude Rate                  4115 non-null object\n",
-      "dtypes: float64(1), int64(2), object(9)\n",
+      "dtypes: float64(2), int64(2), object(8)\n",
       "memory usage: 385.9+ KB\n"
      ]
     }
@@ -448,7 +448,7 @@
     }
    ],
    "source": [
-    "grouped1 = df.groupby('State')[['Deaths', 'State Code']].sum()\n",
+    "grouped1 = df.groupby('State')[['Deaths', 'P']].sum()\n",
     "grouped1.head(10)"
    ]
   },
